@@ -1,5 +1,10 @@
 2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>
 
+	* libwfut/WFUT.cpp, libwfut/WFUT.h: Commented the header file. Added an
+	  enum to describe the returned error codes.
+
+2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>
+
 	*  configure.ac, tools/Makefile.am: Added pkgconfig check for curl.
 	   Removed hardcoded link to curl.
 
